added file for plots

--- a/data_to_graph.ipynb
+++ b/data_to_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx.write_graphml(G_1, \"G_1.graphml\")\n",
+    "nx.write_graphml(G_2, \"G_2.graphml\")\n",
+    "nx.write_graphml(G_3, \"G_3.graphml\")\n",
+    "nx.write_graphml(G_4, \"G_4.graphml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +226,6 @@
     "            edge = tuple(sorted((u, v)))  # Sort the edge tuple\n",
     "            \n",
     "            # PRobability updatating depending on sex and other tietype connections\n",
-    "\n",
     "            # If both are mean and tietype is sex then transmission probability is tG\n",
     "            if G.nodes[u].get(\"Sex\") == \"Male\" and G.nodes[v].get(\"Sex\") == \"Male\":\n",
     "                transmission_probability[3] = tG\n",
@@ -222,14 +233,14 @@
     "            elif G.nodes[u].get(\"Sex\") != \"Male\" or G.nodes[v].get(\"Sex\") != \"Male\":\n",
     "                transmission_probability[3] = t3\n",
     "\n",
-    "            # If connection is not a sex connection, transmission probability is 0.1 of the original probability\n",
-    "            # Exclude t1 and t2 if they are None \n",
+    "            # If connection is not a sex connection, transmission probability is 0.x of the original probability\n",
+    "            # Exclude tX if it is None \n",
     "            if t3 == None:\n",
     "                transmission_probability[3] = 0\n",
     "            if t4 == None:\n",
     "                transmission_probability[4] = 0\n",
     "\n",
-    "                        # Meaning socail = 0.1 of sex probability\n",
+    "\n",
     "            if edge not in graphs[3].edges():\n",
     "                transmission_probability[1] = transmission_probability[3] * 0.01\n",
     "\n",
@@ -280,20 +291,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 145,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'t1': None, 't2': 0, 't3': 0.008, 't4': 0.0063, 'tG': 0.0138}\n",
-      "{'t1': 0, 't2': None, 't3': 0.008, 't4': 0.0063, 'tG': 0.0138}\n",
-      "{'t1': 0, 't2': 0, 't3': None, 't4': 0.0063, 'tG': 0.0138}\n",
-      "{'t1': 0, 't2': 0, 't3': 0.008, 't4': None, 'tG': 0.0138}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Probabilities dictionary\n",
     "base_probabilities = {\n",
@@ -322,7 +322,6 @@
     "# Exclude each connection type and create graphs\n",
     "for i, conn_type in enumerate(connection_types):\n",
     "    excluded_probs = exclude_probabilities(base_probabilities, [conn_type])\n",
-    "    print(excluded_probs)\n",
     "    graphs_excluded[f\"G_no{i+1}\"] = create_graph(**excluded_probs)\n",
     "\n",
     "# Example of accessing graphs\n",
@@ -330,6 +329,52 @@
     "G_no2 = graphs_excluded[\"G_no2\"]\n",
     "G_no3 = graphs_excluded[\"G_no3\"]\n",
     "G_no4 = graphs_excluded[\"G_no4\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating a graph for B that only shows the highest tietype pr. connection\n",
+    "\n",
+    "This is purely for visual purposes in gephi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B_highest_tietype_edges = nx.Graph()\n",
+    "\n",
+    "# Iterate through all edges in the original graph B\n",
+    "for u, v, data in B.edges(data=True):\n",
+    "    # Get the tie types from the edge data\n",
+    "    tie_types = data['TIETYPE']\n",
+    "    \n",
+    "    # Determine the highest tie_type\n",
+    "    highest_tie_type = max(tie_types)\n",
+    "    \n",
+    "    # Add the edge to the new graph with the highest tie_type\n",
+    "    B_highest_tietype_edges.add_edge(\n",
+    "        u, v,\n",
+    "        probability=data['probability'],  # Retain the original probability\n",
+    "        TIETYPE=highest_tie_type       # Keep only the highest tie_type\n",
+    "    )\n",
+    "\n",
+    "# Copy node attributes from the original graph B\n",
+    "node_attributes = {node: data for node, data in B.nodes(data=True)}\n",
+    "nx.set_node_attributes(B_highest_tietype_edges, node_attributes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx.write_graphml(B_highest_tietype_edges, \"B_highest_tietype_edges.graphml\")"
    ]
   },
   {
@@ -344,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
