--- a/data_to_graph.ipynb
+++ b/data_to_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
     "        \"Age\": row[\"AGE\"],\n",
     "        \"Education level\": education_mapping.get(row[\"EDUC\"]),\n",
     "        \"Profession\": row[\"OCC\"],\n",
-    "        \"Gay\": 0\n",
+    "        \"Gay\": 0 \n",
     "        }\n",
     "    \n",
     "    node_attributes[id1] = {\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,21 +180,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(1, 5):\n",
     "    G = graphs[i]\n",
     "    for u, v, attributes in G.edges(data=True):\n",
+    "        # Check if both nodes have \"Sex\" == \"Male\"\n",
     "        if G.nodes[u].get(\"Sex\") == \"Male\" and G.nodes[v].get(\"Sex\") == \"Male\":\n",
-    "            G.nodes[u][\"Gay\"] = 1\n",
-    "            G.nodes[v][\"Gay\"] = 1"
+    "            # Check if the edge (u, v) or (v, u) exists in graphs[3]\n",
+    "            if (u, v) in graphs[3].edges() or (v, u) in graphs[3].edges():\n",
+    "                G.nodes[u][\"Gay\"] = 1\n",
+    "                G.nodes[v][\"Gay\"] = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,6 +335,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for u,v, attributes in B.edges(data=True):\n",
+    "    if B.nodes[u][\"Sex\"] == \"Male\" and B.nodes[v][\"Sex\"] == \"Male\":\n",
+    "        if (u,v) in graphs[3].edges() or (v,u) in graphs[3].edges():\n",
+    "            B.nodes[u][\"Gay\"] = 1\n",
+    "            B.nodes[v][\"Gay\"] = 1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -342,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,6 +447,13 @@
     "nx.write_graphml(G_no4, \"G_no4.graphml\")\n",
     "nx.write_graphml(B, \"B.graphml\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
